Updating github link to go directly to the repo

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,7 +25,7 @@ website:
         href: https://taso.org.uk/newsletter/
         icon: envelope
       - icon: github
-        href: https://github.com/taso-he
+        href: https://github.com/taso-he/technicalguide
       - icon: twitter
         href: https://twitter.com/taso_he
       - icon: linkedin
