--- a/_quarto.yml
+++ b/_quarto.yml
@@ -97,10 +97,10 @@ website:
     right:   |
       Get in touch:  
       TASO  
-      Evidence Quarter  
-      4th Floor, Albany House  
-      Petty France  
-      London SW1H 9EA  
+      58 Victoria Embankment  
+      Temple  
+      London  
+      EC4Y ODS  
       info@taso.org.uk
     center:
       - text: "EVENTS"
